# forgemono

./: # Code Citations.md  .dependency-cruiser.js  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .goblin-memory.db  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  .prettierrc.json  .vimrc  ARCHITECTURE_IMPROVEMENTS.md  CODEOWNERS  CONTRIBUTING.md  GOBLIN_AI_SYSTEM_DOCS.md  LICENSE  MIRA_INTEGRATION_GUIDE.md  README.md  add_chromatic_token.sh  alerts.yml  alternative_oauth_setup.py  auto_mira_final.sh  background_tasks_inventory.csv  bootstrap_inference.sh  bootstrap_router.sh  colab_llamacpp_setup_runnable.ipynb  colab_ollama_README.md  colab_ollama_setup.ipynb  complete_mira_integration.sh  complete_mira_setup.sh  configure_jira_keys.sh  create_frontend_secrets.sh  deploy_colab_llamacpp.py  deploy_colab_llamacpp.sh  deploy_llm.sh  diagnose_colab.py  diagnose_llamacpp_build.py  docker-compose.vault.yml  docker-compose.yml  (+43 more)
goblinmini-docqa/: .editorconfig  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  HARDENING_DEPLOYMENT_CHECKLIST.md  Makefile  README.md  SECURITY.md  analyze-copilot-usage.py  deploy-systemd-socket.sh  deploy.sh  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  setup-monitoring.sh  worker.py
goblinmini-docqa/app/: __init__.py  cli.py  core.py  decision.py  doc_processor.py  heuristics.py  inference_queue.py  job_queue.py  jobs.py  metrics.py  middleware.py  server.py
goblinmini-docqa/docker/: deploy-prod.sh  docker-compose.monitoring.yml  docker-compose.yml
(+1233 files in other folders)
